# polymarket-recorder

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
deploy/: iam-provisioner-policy.json  pmrec.service  provision-aws.sh  user-data.sh
src/pmrec/: __init__.py  archiver.py  backfill.py  capture.py  clob.py  config.py  flusher.py  gamma.py  main.py  ratelimit.py  universe.py
tests/: conftest.py  test_archiver_ratelimit.py  test_backfill_main.py  test_config.py  test_flusher.py  test_gamma_clob.py  test_universe.py
tools/: plot_market.py
