[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmrec"
version = "0.1.0"
description = "Research-only recorder for public Polymarket market data"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
plot = ["matplotlib>=3.7"]   # for tools/plot_market.py

[project.scripts]
pmrec = "pmrec.main:main"
pmrec-backfill = "pmrec.backfill:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
